Fix scrolling/word wrap, especially on mobile

--- a/style.css
+++ b/style.css
@@ -285,12 +285,15 @@ body>main #content>pre .line-numbers-rows {
   flex-grow: 1;
   font-family: "Fira Mono", monospace;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 #content>textarea,
 #content>pre,
 #content>pre>code {
   font-family: "Fira Mono" !important;
   font-size: 16px;
+  word-wrap: break-word;
+  white-space: pre-wrap !important;
 }
 #content>pre {
   padding-left: 4em !important;
