--- a/style/textarea.styl
+++ b/style/textarea.styl
@@ -1,8 +1,10 @@
 #content
-    flex-grow: 1; font-family: "Fira Mono", monospace; overflow-y: auto
+    flex-grow: 1; font-family: "Fira Mono", monospace; overflow-y: auto; overflow-x: hidden
 #content>textarea, #content>pre, #content>pre>code
     font-family: "Fira Mono" !important
     font-size: 16px
+    word-wrap: break-word
+    white-space: pre-wrap !important
 #content>pre
     padding-left: 4em !important; width: auto; right: 0
 #content>textarea
